# py-license-auditor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  README.md  default_13074707526206179691_0_78891.profraw  default_9873872715078121769_0_24039.profraw  default_9873872715078121769_0_24048.profraw  default_9873872715078121769_0_24057.profraw  default_9873872715078121769_0_24067.profraw  default_9873872715078121769_0_24075.profraw  default_9873872715078121769_0_24169.profraw  default_9874849171645085993_0_28880.profraw  default_9874849171645085993_0_28903.profraw  default_9874849171645085993_0_28923.profraw  default_9874876675544004905_0_32850.profraw  default_9874876675544004905_0_32871.profraw  default_9874876675544004905_0_32883.profraw  default_9874876675544004905_0_32892.profraw  default_9874876675544004905_0_34827.profraw  default_9874876675544004905_0_34851.profraw  default_9874876675544004905_0_34864.profraw  install.sh  l.json  pyproject.toml
.cargo/: config.toml
.github/workflows/: e2e-tests.yml  release.yml
examples/: README.md  ci.toml  comprehensive.toml  corporate.toml  green.toml  personal.toml  policy-corporate.toml  policy-permissive.toml  policy-strict.toml  red.toml  yellow.toml
python/py_license_auditor/: __init__.py
scripts/: coverage.sh  release.sh
src/: cli.rs  config.rs  exceptions.rs  init.rs  lib.rs  main.rs  output.rs  uv_lock.rs
src/commands/: check.rs  config.rs  fix.rs  init.rs  mod.rs
src/exceptions/: checker.rs  interactive.rs  mod.rs  models.rs  storage.rs
src/license/: extractor.rs  mod.rs
src/output/: formatter.rs  mod.rs
src/policy/: checker.rs  config.rs  matcher.rs  mod.rs
tests/e2e/: fixture_tests.rs  helpers.rs  mod.rs  scenarios.rs
tests/e2e/fixtures/sample-project/: pyproject.toml
