[package]
name = "uv-license-extractor"
version = "0.1.0"
edition = "2024"
description = "Extract license information from Python packages"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
walkdir = "2.0"

[dev-dependencies]
tempfile = "3.0"
