[package]
name = "py-license-auditor"
version = "0.5.2"
edition = "2021"
description = "Fast license auditor for uv projects - Extract and analyze license information with uv.lock integration"
authors = ["yayami3 <116920988+yayami3@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yayami3/py-license-auditor"
homepage = "https://github.com/yayami3/py-license-auditor"
documentation = "https://docs.rs/py-license-auditor"
readme = "README.md"
keywords = ["license", "python", "uv", "compliance", "audit"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".git*", 
    "target/", 
    ".amazonq/",
    "*.backup",
    "test-*.toml",
    "homebrew/",
    "install.sh",
    "python/"
]
autobins = false

[[bin]]
name = "py-license-auditor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"
indexmap = { version = "2.0", features = ["serde"] }
anyhow = "1.0"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"

[dev-dependencies]
tempfile = "3.0"

# E2E test configuration
[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[lib]
name = "py_license_auditor"
crate-type = ["rlib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
