[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-license-auditor"
version = "0.5.0"
description = "Fast license auditor for uv projects - Extract and analyze license information with uv.lock integration"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "yayami3", email = "116920988+yayami3@users.noreply.github.com"}
]
keywords = ["license", "python", "uv", "compliance", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/yayami3/py-license-auditor"
Repository = "https://github.com/yayami3/py-license-auditor"
Documentation = "https://github.com/yayami3/py-license-auditor#readme"
Issues = "https://github.com/yayami3/py-license-auditor/issues"

[project.scripts]
py-license-auditor = "py_license_auditor:main"

[tool.setuptools.packages.find]
where = ["python"]
include = ["py_license_auditor*"]

[tool.setuptools.package-data]
py_license_auditor = ["bin/*"]

[tool.py-license-auditor]
check_violations = true
fail_on_violations = true
format = "table"
include_unknown = false

[tool.py-license-auditor.policy]
description = "Balanced policy - permissive licenses + weak copyleft (LGPL, MPL)"
name = "Yellow License Policy"

[tool.py-license-auditor.policy.allowed_licenses]
exact = ["MIT", "Apache-2.0", "BSD-2-Clause", "BSD-3-Clause", "ISC", "LGPL-2.1", "LGPL-3.0", "MPL-2.0"]
patterns = ["BSD-*", "LGPL-*"]

[tool.py-license-auditor.policy.forbidden_licenses]
exact = ["GPL-2.0", "GPL-3.0", "AGPL-3.0", "CDDL-1.0", "EPL-1.0", "EPL-2.0"]
patterns = ["GPL-*", "AGPL-*", "CDDL-*", "EPL-*"]

[tool.py-license-auditor.policy.review_required]
exact = []
patterns = []
